2009-12-09  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/form.py:
	Filter out unchanged RecordForm data on update again, but update their values first.

2009-12-09  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/form.py:
	When retrieving RecordForm data, retrieve all data, not only changed ones.
	
	All data have to be retrieved because information about changed fields may be
	incorrect.  At least no change is signalled for some CbComputer fields that are
	not displayed in the RecordForm.
	
	This change should be revised later.
	

2009-12-08  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/form/list.py:
	Fix XLS export.

2009-12-08  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/form/form.py:
	Don't perform the DB operation when EditForm has not changed, but commit the transaction.

2009-11-06  Milan Zamazal  <pdm@brailcom.org>

	* defs/menu.py:
	Print related menu items when displaying the editing access rights warning.

2009-11-06  Milan Zamazal  <pdm@brailcom.org>

	* defs/menu.py:
	Display warning when editing access rights belonging to several menu items.

2009-11-03  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/list.py:
	New method SideBrowseForm.main_form.

2009-11-03  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Make pytis_action_rights_foldable db function work even with NULL arguments.

2009-10-29  Milan Zamazal  <pdm@brailcom.org>

	* defs/menu.py:
	Add mistakenly removed lines in menu.py.

2009-12-07  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/data/types_.py:
	* lib/pytis/presentation/field.py:
	Fix permission handling for data objects not derived from `RestrictedData'.

2009-12-07  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/form/form.py:
	Revert "Refuse to commit EditForm if nothing has been changed".
	
	The form transaction may contain uncommitted changes (for example resulting
	from form button actions) even if the form itself (more precisely its